# youtube-video-downloader

./: README.md  bootstrap.sh  get_audio.py  pyproject.toml
app/: get_audio.py  main.py
app/core/: constants.py  utils_logging.py
src/yt_app/: constants.py  foo.py  get_audio.py
src/yt_app/api/: main.py
videos/: README.md
